--- a/FlavorFinder/FlavorFinder/Base.lproj/Main.storyboard
+++ b/FlavorFinder/FlavorFinder/Base.lproj/Main.storyboard
@@ -1687,34 +1687,54 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="551"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="About FlavorFinder" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P5a-AQ-dkt">
-                                <rect key="frame" x="173" y="94" width="255" height="21"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="rzo-E1-sBh">
+                                <rect key="frame" x="30" y="80" width="540" height="391"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="About FlavorFinder" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P5a-AQ-dkt">
+                                        <rect key="frame" x="0.0" y="0.0" width="540" height="36"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="36" id="gsf-oD-xYw"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="25"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="center" spacing="9" translatesAutoresizingMaskIntoConstraints="NO" id="2Bu-dj-flw">
+                                        <rect key="frame" x="0.0" y="50" width="540" height="341"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="8" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HbP-nM-5TP">
+                                                <rect key="frame" x="27" y="0.0" width="486" height="166"/>
+                                                <string key="text">Flavor Finder allows cooks and culinary creatives to expand their knowledge and spice up their recipes with confidence through the ability to look up, favorite, and store flavor combinations.</string>
+                                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
+                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="10" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wSm-nz-MMn">
+                                                <rect key="frame" x="27" y="175" width="486" height="166"/>
+                                                <string key="text">Icons used in accordance with free-to-use license from https://icons8.com/ unless otherwise noted: "Vegetarian" by Cody Foss from the Noun Project. All code found at https://github.com/tristanchu/FlavorFinder.</string>
+                                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="14"/>
+                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstItem="HbP-nM-5TP" firstAttribute="width" secondItem="2Bu-dj-flw" secondAttribute="width" multiplier="0.9" id="Ryw-Gd-Qlx"/>
+                                            <constraint firstItem="wSm-nz-MMn" firstAttribute="width" secondItem="2Bu-dj-flw" secondAttribute="width" multiplier="0.9" id="wQD-lg-XtH"/>
+                                        </constraints>
+                                    </stackView>
+                                </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="21" id="MGo-rT-t1n"/>
-                                    <constraint firstAttribute="width" constant="255" id="bXL-el-Bfm"/>
+                                    <constraint firstItem="P5a-AQ-dkt" firstAttribute="width" secondItem="rzo-E1-sBh" secondAttribute="width" id="VCL-Y1-RZp"/>
+                                    <constraint firstItem="2Bu-dj-flw" firstAttribute="width" secondItem="rzo-E1-sBh" secondAttribute="width" id="dLB-jM-dSu"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="25"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wSm-nz-MMn">
-                                <rect key="frame" x="143" y="132" width="315" height="191"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="315" id="ivg-UV-bou"/>
-                                </constraints>
-                                <string key="text">Icons used in accordance with free-to-use license from https://icons8.com/ unless otherwise noted: "Vegetarian" by Cody Foss from the Noun Project</string>
-                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" red="0.96292404750000005" green="0.96292404750000005" blue="0.96292404750000005" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="wSm-nz-MMn" firstAttribute="top" secondItem="P5a-AQ-dkt" secondAttribute="bottom" constant="17" id="9Nh-m1-CRX"/>
-                            <constraint firstItem="XNS-9t-jiC" firstAttribute="top" secondItem="wSm-nz-MMn" secondAttribute="bottom" constant="228" id="I6y-8X-9Vh"/>
-                            <constraint firstItem="wSm-nz-MMn" firstAttribute="centerX" secondItem="Jnq-i6-eKP" secondAttribute="centerX" id="VFc-Ur-bif"/>
-                            <constraint firstItem="P5a-AQ-dkt" firstAttribute="top" secondItem="kwD-hQ-KfC" secondAttribute="bottom" constant="30" id="vdZ-uo-bpM"/>
-                            <constraint firstItem="P5a-AQ-dkt" firstAttribute="centerX" secondItem="wSm-nz-MMn" secondAttribute="centerX" id="zxd-S7-WSF"/>
+                            <constraint firstItem="rzo-E1-sBh" firstAttribute="top" secondItem="Jnq-i6-eKP" secondAttribute="topMargin" constant="80" id="1Cu-ma-S4h"/>
+                            <constraint firstItem="rzo-E1-sBh" firstAttribute="leading" secondItem="Jnq-i6-eKP" secondAttribute="leadingMargin" constant="10" id="EVJ-6N-1dY"/>
+                            <constraint firstItem="rzo-E1-sBh" firstAttribute="centerY" secondItem="Jnq-i6-eKP" secondAttribute="centerY" id="Hpk-vD-Hw9"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="rzo-E1-sBh" secondAttribute="trailing" constant="10" id="oPg-jb-LIg"/>
                         </constraints>
                     </view>
                 </viewController>
