--- a/FlavorFinder/FlavorFinder/Base.lproj/Main.storyboard
+++ b/FlavorFinder/FlavorFinder/Base.lproj/Main.storyboard
@@ -1711,7 +1711,7 @@
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="10" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wSm-nz-MMn">
                                                 <rect key="frame" x="27" y="175" width="486" height="166"/>
-                                                <string key="text">Icons used in accordance with free-to-use license from https://icons8.com/ unless otherwise noted: "Vegetarian" by Cody Foss from the Noun Project. All code found at https://github.com/tristanchu/FlavorFinder.</string>
+                                                <string key="text">Icons used in accordance with free-to-use license from https://icons8.com/ or https://fortawesome.github.io/Font-Awesome/ unless otherwise noted: "Vegetarian" by Cody Foss from the Noun Project. All code found at https://github.com/tristanchu/FlavorFinder.</string>
                                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="14"/>
                                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
